--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,28 +5,15 @@ on:
     branches:
       - main
 
-permissions:
-  pages: write
-  id-token: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Move deploy contents to root
-        run: |
-          mkdir public
-          cp -r deploy/* public/
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: public
+        uses: actions/checkout@v3
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v3
-
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./photos # ✅ photos 폴더만 배포!
